# meesign-client

./: .gitignore  .gitmodules  README.md  analysis_options.yaml  flutter_launcher_icons.yaml  pubspec.yaml  shell.nix
.github/workflows/: flutter-ci.yml
android/: build.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt
assets/lottie/: challenge.json  challenge_dark_mode.json  challenge_universal.json  decrypt.json  decrypt_dark_mode.json  decrypt_light_mode.json  groups_dark_mode.json  groups_light_mode.json  sign.json  sign_dark_mode.json  sign_light_mode.json
ffigen/: mpc-sigs.yaml  pdf-sig.yaml
integration_test/: app_test.dart  minimal_server_and_client.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_container.dart  dylib_worker.dart  file_storage.dart  main.dart  mpc_model.dart  reporter.dart  rnd_name_generator.dart  routes.dart  sync.dart  theme.dart  ui_constants.dart
lib-native/: CMakeLists.txt
lib-native/pdf-sig/: SigGenerator.cpp  SigGenerator.h  pdf-sig.cpp  pdf-sig.h
lib/app/model/: navigation_tab.dart  navigation_tab_model.dart  settings.dart
lib/app/widget/: offstage_navigator.dart  tabbed_scaffold.dart
lib/card/: card.dart  iso7816.dart  jobs.dart  nfc_card.dart  pcsc_card.dart
lib/data/: device_repository.dart  file_repository.dart  file_store.dart  group_repository.dart  task_repository.dart  tmp_dir_provider.dart
lib/enums/: data_input_type.dart  data_view.dart  fab_type.dart  screen_layout.dart  task_status.dart  task_type.dart  user_status.dart
lib/grpc/: mpc.pb.dart  mpc.pbenum.dart  mpc.pbgrpc.dart  mpc.pbjson.dart
lib/model/: cosigner.dart  device.dart  file.dart  group.dart  mpc_model.dart  signed_file.dart  tasks.dart
lib/native/: dylib_manager.dart  dylib_worker.dart  pdf_sig_lib.dart  worker.dart
lib/pages/: about_page.dart  challenge_listing_page.dart  challenge_sub_page.dart  decrypt_listing_page.dart  decrypt_sub_page.dart  device_page.dart  device_settings_page.dart  general_settings_page.dart  group_page.dart  groups_listing_page.dart  groups_sub_page.dart  home_page.dart  init_page.dart  new_group_page.dart  new_task_page.dart  qr_reader_page.dart  register_page.dart  search_peer_page.dart  settings_page.dart  signing_listing_page.dart  signing_sub_page.dart  tabbed_task_page.dart  tabbed_tasks_page.dart  task_listing.dart  theme_settings_page.dart  ui_mode_select_page.dart
lib/services/: settings_controller.dart
lib/sessions/: anonymous_session.dart  user_session.dart
lib/templates/: default_page_template.dart
lib/ui/: about_page.dart  card_reader_page.dart  device_page.dart  group_page.dart  home_page.dart  home_state.dart  init_page.dart  new_group_page.dart  qr_identity_page.dart  qr_reader_page.dart  registration_page.dart  search_peer_page.dart
lib/util/: app_arg_parser.dart  app_dir_getter.dart  card_reader_launcher.dart  chars.dart  client_factory.dart  confirm_device_change.dart  date_formatter.dart  error_logger.dart  fade_black_page_transition.dart  get_shares_warning.dart  group_creator.dart  launch_home.dart  layout_getter.dart  pick_pdf_file.dart  platform.dart  qr_coder.dart  set_user_login_prefereces.dart  status_message.dart  uuid.dart
lib/util/actions/: challenge_creator.dart  document_signer.dart  encrypt_data.dart  group_creator.dart  select_group.dart  task_type_selector.dart
lib/util/extensions/: list_intersperse.dart  task_approvable.dart
lib/view_model/: app_view_model.dart  tabs_view_model.dart
lib/widget/: avatar_app_bar.dart  card_reader_page.dart  change_device_section.dart  confirmation_dialog.dart  controlled_lottie_animation.dart  counter_badge.dart  danger_zone_section.dart  data_input_dialog.dart  device_icon.dart  device_identity.dart  device_name.dart  device_selection_bar.dart  device_suggestion_tile.dart  dismissible.dart  empty_list.dart  entity_chip.dart  error_dialog.dart  existing_user_list.dart  fab_configurator.dart  fluid_gradient.dart  group_suggestion_tile.dart  hex_table.dart  home_page.dart  main_app_bar.dart  new_group_page.dart  no_results_placeholder.dart  number_input.dart  option_tile.dart  qr_identity_page.dart  qr_reader_page.dart  registration_form.dart  registration_page.dart  search_peer_page.dart  skeletonizer_template.dart  smart_logo.dart  tab_selector_item.dart  task_list_view.dart  task_state_indicator.dart  task_tile.dart  warning_banner.dart  (+1 more)
lib/widget/auth/: registration_form.dart
lib/widget/task_tiles/: challenge_task_tile.dart  decrypt_task_tile.dart  group_task_tile.dart  (+1 more)
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
meesign_core/: .gitignore  README.md  dart_test.yaml  pubspec.yaml
meesign_core/example/: time_policy.dart
meesign_core/lib/: meesign_card.dart  meesign_core.dart  meesign_data.dart  meesign_model.dart
meesign_core/test/: core_test.dart  matcher.dart
meesign_native/: README.md  pubspec.yaml
meesign_native/ffigen/: meesign-crypto.yaml  mpc-sigs.yaml  pdf-sig.yaml
meesign_native/hook/: build.dart
meesign_native/lib/: meesign_native.dart
meesign_native/native/: CMakeLists.txt
meesign_native/native/cmake/modules/: FindPoDoFo.cmake
meesign_native/native/mpc-sigs/: .gitignore  Cargo.toml  build.rs
meesign_native/native/mpc-sigs/proto/: meesign.proto
meesign_native/native/mpc-sigs/src/: auth.rs  c_api.rs  lib.rs  protocol.rs
meesign_native/native/mpc-sigs/src/protocols/: elgamal.rs  gg18.rs  mod.rs
meesign_native/native/pdf-sig/: CMakeLists.txt  pdf-sig.cpp  pdf-sig.h
meesign_network/: README.md  pubspec.yaml
meesign_network/lib/: grpc.dart  meesign_network.dart
meesign_network/proto/: meesign.proto  mpc.proto
proto/: mpc.proto
test/: widget_test.dart
tool/: cargo-config-gen-android.sh
web/: index.html  manifest.json  meesign_crypto.js  meesign_crypto_bg.wasm  meesign_crypto_worker.js
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+52 files in other folders)
