[package]
name = "mpc-sigs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
mpecdsa = { git = "https://github.com/jirigav/mpecdsa.git" }
openssl = "0.10.46"
prost = "0.9.0"
serde = "1.0.136"
serde_json = "1.0"
typetag = "0.2.1"
elastic-elgamal = { version = "0.3.0-beta.1", features = ["serde"] }
rand = "0.8.3"
curve25519-dalek = { version = "3.1.0", default-features = false, features = ["alloc", "u64_backend"] }

[build-dependencies]
cbindgen = "0.20.0"
prost-build = "0.9.0"
